add the analysis for event